<resources>
    <string name="app_name">Game Time Giving</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Settings -->
    <string name="facebook_application_id" translatable="false">214236638786404</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb214236638786404</string>
    <string name="twitter_consumer_key" translatable="false">3qNkkdNh3vahsZ1i9xTIXqKAV</string>
    <string name="twitter_consumer_secret" translatable="false">8JJe8Avu5MLgmngd8oMrSaTYQosuYn56aF9kcHibIToMdEDo0h</string>
    <string name="game_board_title">Game Board</string>
    <string name="your_pledges">My Pledge:</string>
    <string name="undo_last_pledge">UNDO LAST PLEDGE</string>
    <string name="_0">0</string>
    <string name="period">Time Left</string>
    <string name="teams">View Teams</string>
    <string name="teamstats">Team Stats</string>
    <string name="mystats">My Stats</string>
    <string name="profile">My Profile</string>
    <string name="charities">View Charities</string>
    <string name="testparagraph1">We tackle complex social problems by surrounding North Texans with 200+ local programs in the areas of Education, Income, and Health – the essential components of a thriving community. Instead of just addressing one issue, like hunger or homelessness, we treat 360 degrees of need.</string>
    <string name="placeholder">placeholder</string>
    <string name="defaultcharitylogo">gs://gametimegiving-1b528.appspot.com/defaultcharity.png</string>
    <string name="moredetail">More...</string>
    <string name="savecharity">Follow</string>
    <string name="navbargametext">View Games</string>
    <string name="action_signout">Sign Out</string>
    <string name="followtext">FOLLOW</string>
    <string name="unfollowtext">UNFOLLOW</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut libero elit, rhoncus nec sodales ac, pulvinar sit amet felis. Praesent laoreet leo id risus vehicula ornare. Aliquam erat volutpat. Nullam eu augue sit amet eros aliquet rhoncus id non ante. Nullam tristique ultrices nulla, in aliquet justo luctus quis. Donec nibh lectus, dignissim et sapien sit amet, vulputate bibendum nulla. Quisque eu odio ac felis pellentesque mollis. Aenean erat orci, scelerisque sit amet scelerisque eu, consectetur non tortor. In hac habitasse platea dictumst. Donec eu nisi a ante posuere pharetra. Quisque dignissim, est in interdum auctor, eros nibh bibendum ex, sit amet porta est sem in sem.  Donec dictum sapien ac ante rhoncus aliquam. In ac mattis quam, vel mollis sapien. Cras quis neque et erat iaculis dapibus id non eros. Duis facilisis justo ipsum, ac lacinia dolor fringilla at. Donec egestas dignissim tortor, id maximus urna ornare vitae. Ut id lobortis arcu. Morbi congue, magna vitae faucibus ultrices, enim lacus vulputate lorem, non sagittis urna leo quis justo. Morbi at ex lobortis erat rutrum porttitor. Sed id justo a est pretium cursus. In laoreet luctus ante, ac maximus mauris venenatis in.  Quisque ullamcorper quam dui, at molestie purus venenatis at. Quisque quis pharetra magna, nec varius odio. Etiam accumsan sem urna, nec tempus nisl imperdiet eget. Aenean fringilla, tortor sed tincidunt aliquet, dui est bibendum orci, id porttitor ante erat quis libero. Nullam volutpat felis urna, a aliquam enim sollicitudin at. Vivamus massa diam, facilisis vel nisl in, efficitur fringilla velit. Suspendisse vitae orci est. Pellentesque pulvinar aliquam ex non volutpat. Maecenas fringilla tincidunt lacus vitae tristique.  Cras nunc odio, interdum sed leo sed, scelerisque bibendum ligula. Nunc finibus eleifend scelerisque. Maecenas venenatis ante ac tristique hendrerit. Integer et sem iaculis, lobortis leo nec, iaculis lectus. Aliquam viverra nec lacus eu ornare. Suspendisse fringilla condimentum enim, in ornare mauris. Fusce ullamcorper justo eu orci placerat interdum. Nullam aliquam fringilla odio, in semper ex vestibulum et. Pellentesque et porta mauris.  Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent leo arcu, facilisis non lacus vitae, tristique tincidunt dui. Integer id metus venenatis, consequat sapien ac, iaculis quam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras sed nisi et augue pharetra posuere sed vitae erat. Pellentesque mollis finibus nunc non dapibus. Sed sit amet erat felis. Duis ultrices porta tempor. Pellentesque congue ornare dolor.</string>
    <string name="save">Save</string>
    <string name="cd_logo_of_the_charity">Logo of the charity</string>
    <string name="demo">Demo App</string>
    <string name="clearprefs">Reset</string>
    <string name="termsofserviceurl">https://www.gametimegiving.com/terms.html</string>
    <string name="privacypolicyurl">https://www.gametimegiving.com/privacy.html</string>
    <string name="Cancel">Cancel</string>
    <string name="pickyourteam">Select Your Team</string>
    <string name="select_your_team">Select Your Team</string>
    <string name="pledgeCountSharedPrefName">pledgecount</string>

</resources>
