<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:elevation="100dp"
        card_view:cardCornerRadius="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/charityname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                card_view:layout_constraintBottom_toTopOf="@+id/charitylogo"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/charitylogo"
                android:layout_width="225dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/placeholder"
                app:srcCompat="@drawable/bt_ic_android_pay"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/charityname"/>

            <Button
                android:id="@+id/btnmoredetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="192dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="192dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="125dp"
                android:text="@string/moredetail"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toStartOf="@+id/btnsavecharity"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/charityname"
                card_view:layout_constraintVertical_bias="0.272"/>

            <Button
                android:id="@+id/btnsavecharity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="125dp"
                android:text="@string/followtext"
                card_view:layout_constraintBottom_toBottomOf="@+id/btnmoredetail"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/charitylogo"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>